--- a/docs/src/.vuepress/styles/index.styl
+++ b/docs/src/.vuepress/styles/index.styl
@@ -1,3 +1,14 @@
 .contains-task-list li {
     list-style-type: none;
 }
+
+/*
+.home .features {
+    align-items: center !important;
+    justify-content: space-around !important;
+}
+*/
+
+.home .feature:last-child {
+    margin: 0 auto !important;
+}
