--- a/docs/src/.vuepress/styles/index.styl
+++ b/docs/src/.vuepress/styles/index.styl
@@ -12,3 +12,17 @@
 .home .feature:last-child {
     margin: 0 auto !important;
 }
+
+.custom-block.note {
+    margin: 1rem 0;
+    padding: .1rem 1.5rem;
+    border-radius: 0.4rem;
+    background-color: #f0f4f8;
+}
+
+.custom-block.right {
+    opacity: 0.6;
+    font-size: 0.9rem;
+    text-align: right;
+}
+
